--- a/mixins.scss
+++ b/mixins.scss
@@ -1,10 +1,12 @@
-@mixin include-blockquote-colors($colors-map) {
-    @if map-has-key($colors-map, border-color) and map-get($colors-map, border-color) {
-        border-color: map-get($colors-map, border-color);
-    }
-    @if map-has-key($colors-map, color) and map-get($colors-map, color) {
-        color: map-get($colors-map, color);
-    }
+@mixin blockquote-extra-colors-propertys($colors-map) {}
+
+@mixin blockquote-colors-propertys($colors-map) {
+    @include property-from-map($colors-map, border-color);
+    @include property-from-map($colors-map, border-top-color);
+    @include property-from-map($colors-map, border-bottom-color);
+    @include property-from-map($colors-map, border-left-color);
+    @include property-from-map($colors-map, border-right-color);
+    @include blockquote-extra-colors-propertys($colors-map);
 }
 
 @mixin blockquote-colors($colors-map) {
