--- a/config.scss
+++ b/config.scss
@@ -1,3 +1,4 @@
+//Margins
 $blockquote-margin-top: $elements-margin-top !default;
 $blockquote-margin-bottom: $elements-margin-bottom !default;
 $blockquote-margin-left: 1em !default;
@@ -14,5 +15,47 @@ $blockquote-margin-for-screens: () !default;
     ...
 ) !default;*/
 
-$blockquote-border-left: 0.2em solid $primary-color !default;
-$blockquote-padding: 0 0 0 1em !default;
+//Borders
+$blockquote-border-width: 0 !default;
+$blockquote-border-style: null !default;
+$blockquote-border-color: null !default;
+
+$blockquote-border-top-width: null !default;
+$blockquote-border-top-style: null !default;
+$blockquote-border-top-color: null !default;
+$blockquote-border-top-make-shorthand: false !default;
+
+$blockquote-border-bottom-width: null !default;
+$blockquote-border-bottom-style: null !default;
+$blockquote-border-bottom-color: null !default;
+$blockquote-border-bottom-make-shorthand: false !default;
+
+$blockquote-border-left-width: 0.2em !default;
+$blockquote-border-left-style: solid !default;
+$blockquote-border-left-color: $primary-color !default;
+$blockquote-border-left-make-shorthand: true !default;
+
+$blockquote-border-right-width: null !default;
+$blockquote-border-right-style: null !default;
+$blockquote-border-right-color: null !default;
+$blockquote-border-right-make-shorthand: false !default;
+
+//Paddings
+$blockquote-padding-top: 0 !default;
+$blockquote-padding-bottom: 0 !default;
+$blockquote-padding-left: 1em !default;
+$blockquote-padding-right: 0 !default;
+//Defined paddings for each screens.
+$blockquote-padding-for-screens: () !default;
+/*$blockquote-padding-for-screens: (
+    s1: (
+        top: 20px, //Not required. Define only the paddings values you want to change. Example - s2: ( top: 20px ) - change only top padding for screens greater than s2
+        bottom: 20px,
+        left: 20px,
+        right: 20px,
+    ),
+    ...
+) !default;*/
+
+//Extra style
+@mixin blockquote-extra-style() {}
