--- a/mixins.scss
+++ b/mixins.scss
@@ -1,9 +1,11 @@
-@mixin blockquote-extra-colors-propertys($colors-map) {}
+//@mixin blockquote-extra-colors-propertys($colors-map) {} //Create this mixin before import module when you want add some special colors style for element
 
 @mixin blockquote-colors-propertys($colors-map) {
     @include property-from-map($colors-map, border-color);
     @include property-from-map($colors-map, border-left-color);
-    @include blockquote-extra-colors-propertys($colors-map);
+    @if mixin-exists(blockquote-extra-colors-propertys) {
+        @include blockquote-extra-colors-propertys($colors-map);
+    }
 }
 
 @mixin blockquote-colors($colors-map) {
